cmake_minimum_required(VERSION 3.16)
project(LinuxThreads C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../Compiled)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../Compiled)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../Compiled)

find_library(mta_rand REQUIRED)
find_library(mta_crypt REQUIRED)
find_library(pthread REQUIRED)
find_library(rt REQUIRED)
add_executable(Encrypter.out Encrypter.c Libs/Common.c Libs/Common.h Libs/LinkedList.c Libs/LinkedList.h)
add_executable(Decrypter.out Decrypter.c Libs/Common.c Libs/Common.h Libs/LinkedList.c Libs/LinkedList.h)
add_executable(Launcher.out Launcher.c Libs/Common.c Libs/Common.h Libs/LinkedList.c Libs/LinkedList.h)
target_link_libraries(Encrypter.out mta_rand mta_crypt pthread rt)
target_link_libraries(Decrypter.out mta_rand mta_crypt pthread rt)
target_link_libraries(Launcher.out mta_rand mta_crypt pthread rt)
